fix: body overflow hidden hide scrollable

--- a/src/assets/style/index.css
+++ b/src/assets/style/index.css
@@ -4,6 +4,10 @@
   flex-flow: column;
 }
 
+body {
+  overflow: hidden;
+}
+
 .header {
   flex: 0 1 auto;
 }
